Added password encryption for login. Workinging on added a new users.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
         {
             "type": "node2",
             "request": "launch",
-            "name": "Launch Program",
+            "name": "Launch Node",
             "program": "${workspaceRoot}/app.js",
             "cwd": "${workspaceRoot}"
         },
