--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "johnny-five": "^0.10.6",
     "jsonwebtoken": "^7.3.0",
     "mongodb": "^2.2.24",
-    "mongoose": "^3.6.13"
+    "mongoose": "^3.6.13",
+    "uuid": "^3.0.1",
+    "winston": "^2.3.1"
   }
 }
