Updated user and api files to get app working locally

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "type": "node2",
             "request": "launch",
             "name": "Launch Node",
-            "program": "${workspaceRoot}/app.js",
+            "program": "${workspaceRoot}\\gardenCenter\\server\\server.js",
             "cwd": "${workspaceRoot}"
         },
         {
