--- a/gardenCenter/package.json
+++ b/gardenCenter/package.json
@@ -22,7 +22,7 @@
     "@angular/router": "4.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.7.6",
+    "zone.js": "^0.8.4",
     "body-parser": "^1.0.1",
     "express": "^4.0.0",
     "johnny-five": "^0.10.7",
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@angular/cli": "1.0.0",
     "@angular/compiler-cli": "4.0.0",
+    "@angular/service-worker": "^1.0.0-beta.8",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
@@ -43,9 +44,9 @@
     "karma": "~1.4.1",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.4.2",
