Split API into public and private (#2)
* Updated gitignore file

* Updated user and api files to get app working locally

* - Split the api out to public and private routes
- Pushed the middleware back into server.js

* - Increased the timeout from 30 to 3600 as it was causing errors.

* Adding working files.

--- a/gardenCenter/package.json
+++ b/gardenCenter/package.json
@@ -1,14 +1,15 @@
 {
   "name": "garden-center",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "garden-start": "mongod && node server/server.js",
+    "garden-build": "ng build && node server/server.js"
   },
   "private": true,
   "dependencies": {
