--- a/gardenCenter/package.json
+++ b/gardenCenter/package.json
@@ -29,7 +29,7 @@
     "johnny-five": "^0.10.7",
     "jsonwebtoken": "^7.3.0",
     "mongodb": "^2.2.24",
-    "mongoose": "^3.6.13",
+    "mongoose": "4.9.5",
     "uuid": "^3.0.1",
     "winston": "^2.3.1"
   },
