--- a/gardenCenter/package.json
+++ b/gardenCenter/package.json
@@ -8,35 +8,35 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "garden-start": "mongod && node server/server.js",
-    "garden-build": "ng build && node server/server.js"
+    "gcStart": "mongod && node server/server.js",
+    "gcBuild": "ng build && node server/server.js"
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "4.0.0",
-    "@angular/compiler": "4.0.0",
-    "@angular/core": "4.0.0",
-    "@angular/forms": "4.0.0",
-    "@angular/http": "4.0.0",
-    "@angular/platform-browser": "4.0.0",
-    "@angular/platform-browser-dynamic": "4.0.0",
-    "@angular/router": "4.0.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4",
-    "body-parser": "^1.0.1",
-    "express": "^4.0.0",
-    "johnny-five": "^0.10.7",
-    "jsonwebtoken": "^7.3.0",
-    "mongodb": "^2.2.24",
+    "@angular/common": "4.3.5",
+    "@angular/compiler": "4.3.5",
+    "@angular/core": "4.3.5",
+    "@angular/forms": "4.3.5",
+    "@angular/http": "4.3.5",
+    "@angular/platform-browser": "4.3.5",
+    "@angular/platform-browser-dynamic": "4.3.5",
+    "@angular/router": "4.3.5",
+    "core-js": "^2.5.0",
+    "rxjs": "^5.4.3",
+    "zone.js": "^0.8.16",
+    "body-parser": "^1.17.2",
+    "express": "^4.15.4",
+    "johnny-five": "^0.11.5",
+    "jsonwebtoken": "^7.4.3",
+    "mongodb": "^2.2.31",
     "mongoose": "^3.6.13",
     "uuid": "^3.0.1",
     "winston": "^2.3.1"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0",
-    "@angular/compiler-cli": "4.0.0",
-    "@angular/service-worker": "^1.0.0-beta.8",
+    "@angular/cli": "1.3.1",
+    "@angular/compiler-cli": "4.3.5",
+    "@angular/service-worker": "^1.0.0-beta.16",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
@@ -51,6 +51,6 @@
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.4.2",
-    "typescript": "2.2.2"
+    "typescript": "2.4.2"
   }
 }
