--- a/gardenCenter/package.json
+++ b/gardenCenter/package.json
@@ -8,34 +8,35 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "garden-start": "mongod && node server/server.js",
-    "garden-build": "ng build && node server/server.js"
+    "garden-start": "ng serve && node server/server.js",
+    "garden-build": "ng build --aot && node server/server.js"
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "4.0.0",
-    "@angular/compiler": "4.0.0",
-    "@angular/core": "4.0.0",
-    "@angular/forms": "4.0.0",
-    "@angular/http": "4.0.0",
-    "@angular/platform-browser": "4.0.0",
-    "@angular/platform-browser-dynamic": "4.0.0",
-    "@angular/router": "4.0.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4",
+    "@angular/common": "4.3.5",
+    "@angular/compiler": "4.3.5",
+    "@angular/core": "4.3.5",
+    "@angular/forms": "4.3.5",
+    "@angular/http": "4.3.5",
+    "@angular/platform-browser": "4.3.5",
+    "@angular/platform-browser-dynamic": "4.3.5",
+    "@angular/router": "4.3.5",
     "body-parser": "^1.0.1",
+    "core-js": "^2.4.1",
+    "cors": "^2.8.3",
     "express": "^4.0.0",
     "johnny-five": "^0.10.7",
     "jsonwebtoken": "^7.3.0",
     "mongodb": "^2.2.24",
     "mongoose": "4.9.5",
+    "rxjs": "^5.1.0",
     "uuid": "^3.0.1",
-    "winston": "^2.3.1"
+    "winston": "^2.3.1",
+    "zone.js": "0.8.5"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0",
-    "@angular/compiler-cli": "4.0.0",
+    "@angular/cli": "1.3.0",
+    "@angular/compiler-cli": "4.3.5",
     "@angular/service-worker": "^1.0.0-beta.8",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
